--- a/html/include/pedalboard.html
+++ b/html/include/pedalboard.html
@@ -1,15 +1,13 @@
 <div class="pedalboard">
-  <div class="img">
-    {{#thumbnail}}
-      <img src="/pedalboards/{{thumbnail}}?tstamp={{tstamp}}" />
-    {{/thumbnail}}
-  </div>
-  <div class="info">
-    <span class="title">{{title}}</span>
-    <span class="actions">
-      <span class="js-load open">Open</span>
-      <span class="js-duplicate duplicate hidden">Duplicate</span>
-      <span class="js-remove delete" style="float:right">Delete</span>
-    </span>
-  </div>
+    <div class="img">
+        <img src="{{image}}" alt=""/>
+    </div>
+    <div class="info">
+        <span class="title">{{title}}</span>
+        <span class="actions">
+            <span class="js-load open">Open</span>
+            <!--<span class="js-duplicate duplicate hidden">Duplicate</span>-->
+            <!--<span class="js-remove delete" style="float:right">Delete</span>-->
+        </span>
+    </div>
 </div>
